--- a/QUIZ/Quiz1.html
+++ b/QUIZ/Quiz1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="../public/css/style.css"> -->
     <title>Mythology Quiz</title>
-    <link rel="stylesheet" href="../public/css/quizstyle.css">
+    <link rel="stylesheet" href="./css/quizstyle.css">
 
 </head>
 
@@ -33,9 +33,9 @@
         </div>
     </div>
 
-    <script type='text/javascript' src="quiz_controller.js"></script>
-    <script type='text/javascript' src="question.js"></script>
-    <script type='text/javascript' src="question_app.js"></script>
+    <script type='text/javascript' src="./js/quiz_controller.js"></script>
+    <script type='text/javascript' src="./js/question.js"></script>
+    <script type='text/javascript' src="./js/question_app.js"></script>
 
 </body>
 
